--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="https://discord.gg/mPf5cFK5ZA"><i class="fab fa-discord"></i></a></li>
 			<li><a href="https://twitter.com/leczyyy"><i class="fab fa-twitter-square"></i></a></li>
 			<li><a href="https://www.youtube.com/channel/UCc8EC7Tj217JOaQVSB0fUQw"><i class="fab fa-youtube-square"></i></a></li>
-			<li><a href="https://github.com/Leczyyy"><i class="fab fa-github-square"></i></a></li>									
+			<li><a href="https://github.com/LeczyDeveloper"><i class="fab fa-github-square"></i></a></li>									
 		</ul>
 	</section>
 </body>
