--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img src="imagenes/main.gif" width="100" alt="" class="box-img">
 		<h1><strong>Leczy</strong></h1>
 		<h2>Developer</h2>
-		<p>¡Hola! me llamo <strong>Leczy</strong>, soy un Developer Front-End, actualmente estoy intentando mejorar en todos los aspectos relacionados a la programación. <br />Tengo un proyecto el cual es un Bot de <strong>Discord</strong>, y lo puedes encontrar <strong><a href="https://top.gg/bot/775885650653741067">pulsando aquí</a></strong>.</p>
+		<p>¡Hola! soy <strong>Leczy</strong>, soy un Developer Front-End, actualmente estoy intentando mejorar en todos los aspectos relacionados a la programación. <br />Tengo un proyecto el cual es un Bot de <strong>Discord</strong>, y lo puedes encontrar <strong><a href="https://top.gg/bot/775885650653741067">pulsando aquí</a></strong>.</p>
 		<ul>
 			<li><a href="https://discord.gg/mPf5cFK5ZA"><i class="fab fa-discord"></i></a></li>
 			<li><a href="https://twitter.com/leczyyy"><i class="fab fa-twitter-square"></i></a></li>
