--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             
             <li><a href="javascript:alert('leczy#0001');"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/leczyok"><i class="fab fa-twitter"></i></a></li>
-            <li><a target="_blank" href="https://www.youtube.com/channel/UCc8EC7Tj217JOaQVSB0fUQw"><i class="fab fa-youtube"></i></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/@asap"><i class="fab fa-youtube"></i></a></li>
             <li><a target="_blank" href="https://steamcommunity.com/id/sunydeis"><i class="fab fa-steam"></i></a></li>  
            
     </ul>
