--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <!-- Emoji -->
 
-<p class="emoji animate__animated animate__fadeIn">✨</p>
+<p class="emoji animate__animated animate__fadeIn">🪐</p>
 
 <!-- Social Medias -->
 
