--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <meta name="theme-color" content="#7289da">
 <meta content="Leczy" property="og:title" />
 <meta name="author" content="not">
-<meta content="https://leczy.club/assets/img/carweb.jpg" property="og:image">
+<meta content="https://leczy.site/assets/img/carweb.jpg" property="og:image">
 <meta content="puffin on zootiez" property="og:description" />
 <meta content="puffin on zootiez" name="description" />
 <meta property="og:site_name" content=";)" />
-<meta property="og:url" content="https://leczy.club/" />
+<meta property="og:url" content="https://leczy.site/" />
 
 <!-- Font Awesome Resources -->
 
