--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
 <h1 class="animate__animated animate__fadeIn animate__delay-3s"><strong>404</strong> ERROR</h1>
 <h2 class="wh animate__animated animate__zoomIn animate__delay-4s">¿what happened?</h2>
 <div id="parragraph">
-<p class="animate__animated animate__fadeInUp animate__delay-4s">It looks like you entered an incorrect URL, try</br> entering "<a class="goback" href="https://leczy.club">leczy.club</a>" or click on the button below.</p>
+<p class="animate__animated animate__fadeInUp animate__delay-4s">It looks like you entered an incorrect URL, try</br> entering "<a class="goback" href="https://leczy.site">leczy.site</a>" or click on the button below.</p>
 </div>
 
 <div class="back animate__animated animate__fadeIn animate__delay-5s animate__slower">
