--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <!-- Song Name -->
 
 <div class="current animate__animated animate__fadeInUp animate__delay-4s">
-    ↓ song: <strong>Duvet - Boa</strong> 🌙
+    ↓ song: <strong>all of me - 21 savage</strong> 🌙
 </div>
 
 <!-- Play & Pause -->
@@ -110,7 +110,7 @@
 <script>
         
         var song = new Audio ();
-        song.src = "assets/music/Duvet.mp3";
+        song.src = "assets/music/allofme.mp3";
 
 </script>
 
