--- a/404.html
+++ b/404.html
@@ -21,11 +21,11 @@
 <meta name="theme-color" content="#7289da">
 <meta content="Leczy" property="og:title" />
 <meta name="author" content="not">
-<meta content="https://leczy.site/assets/img/carweb.jpg" property="og:image">
+<meta content="https://leczy.lat/assets/img/carweb.jpg" property="og:image">
 <meta content="errrrrrrrrrrrrrrooor" property="og:description" />
 <meta content="errrrrrrrrrrrrrrooor" name="description" />
 <meta property="og:site_name" content=";(" />
-<meta property="og:url" content="https://leczy.site/" />
+<meta property="og:url" content="https://leczy.lat/" />
 
 <!-- Javascript -->
 
@@ -41,7 +41,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
 
-	<title>leczy.site | Error 404</title>
+	<title>leczy.lat | Error 404</title>
 
 </head>
 <body>
@@ -56,7 +56,7 @@
 </div>
 
 <div class="back animate__animated animate__fadeIn animate__delay-5s animate__slower">
-      <a href="https://leczy.site">
+      <a href="https://leczy.lat">
 	<button class="button-home">◀ go home</button>
       </a>
 </div>
