--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
            
     <ul>
             
-            <li><a href="javascript:alert('username: leczy (963935544461639730)');"><i class="fab fa-discord"></i></a></li>
+            <li><a href="javascript:alert('username: leeczy (506270743940694016)');"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/leczyok"><i class="fab fa-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/@asap"><i class="fab fa-youtube"></i></a></li>
             <li><a target="_blank" href="https://steamcommunity.com/id/sunydeis"><i class="fab fa-steam"></i></a></li>  
